Update Exception class and mark unused methods as deprecated
This commit replaces the usage of DocxStamperException with OfficeStamperException and marks several get methods in DocumentUtil as deprecated as they are not used internally. Further code optimization and cleanup was performed to enhance readability.